@@ -59,6 +59,8 @@ rm_method_id_string (int id)
       return "object_slot_copy_in";
     case RM_object_slot_read:
       return "object_slot_read";
+    case RM_object_discarded_clear:
+      return "object_discarded_clear";
     case RM_exception_collect:
       return "exception_collect";
     case RM_thread_exregs:
